--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,7 +42,7 @@
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
           {% if post.authors: %}
-            <p> Authors: {{ post.authors }} </p>
+            <p> {{ post.authors }} </p>
           {% endif %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
